test(campus): prevent raw audio in ark requests